Chore(Linting): Removed unused imports